# led

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  ideas.md  readme.md  todo.md
src/: buffer.rs  editor.rs  files.rs  font.rs  formatter.rs  graphemes.rs  line_formatter.rs  main.rs  string_utils.rs  term_ui.rs  utils.rs
src/buffer/: line.rs  line_formatter.rs  mod.rs  node.rs  rope.rs  text_block.rs  text_line.rs  text_node.rs  undo_stack.rs
src/editor/: cursor.rs  mod.rs
src/font/: mod.rs
src/gui/: formatter.rs  mod.rs
src/term_ui/: formatter.rs  mod.rs  screen.rs  smallstring.rs
sub_crates/backend/: Cargo.toml
sub_crates/backend/src/: buffer.rs  editor.rs  hash.rs  history.rs  lib.rs  marks.rs  project.rs  transaction.rs
sub_crates/buffers/: Cargo.toml
sub_crates/buffers/src/: lib.rs
sub_crates/ropey/: Cargo.toml
sub_crates/ropey/src/: benches.rs  lib.rs  string_utils.rs  tests.rs
sub_crates/text_encoding/: Cargo.toml  build.rs
sub_crates/text_encoding/src/: latin1.rs  lib.rs  single_byte.rs  utf16_be.rs  utf16_le.rs  utf32_be.rs  utf32_le.rs  utf8.rs  utils.rs  windows1252.rs
sub_crates/text_encoding/tests/: property_tests.rs
sub_crates/ui_layer/: Cargo.toml
sub_crates/ui_layer/src/: lib.rs
