[workspace]
members = [
    "sub_crates/backend",
]

[package]
name = "Led"
version = "0.0.2"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "led"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
ropey = "1"
# ropey = { git = "https://github.com/cessen/ropey", branch = "master" }
# unicode-segmentation = "1"
unicode-segmentation = { git = "https://github.com/unicode-rs/unicode-segmentation.git", branch = "master" }
unicode-width = "0.1"
clap = "2"
smallvec = "1"
crossterm = "0.14"
gag = "0.1.10"
time = "0.2"

# Local crate dependencies
[dependencies.backend]
path = "sub_crates/backend"
