[workspace]
members = [
    "sub_crates/backend",
]

[package]
name = "Led"
version = "0.0.2"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "led"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
ropey = "1"
# ropey = { git = "https://github.com/cessen/ropey", branch = "master" }
unicode-segmentation = "1.7"
unicode-width = "0.1"
clap = "2"
smallvec = "1"
crossterm = "0.20"
gag = "1"
time = "0.2"

# Local crate dependencies
[dependencies.backend]
path = "sub_crates/backend"
